--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,38 +5,40 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App form {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.decks {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 600px;
+  grid-gap: 10px;
+  margin: 0 auto;
+  color: #000;
 }
 
-.card {
-  padding: 2em;
+.decks li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  background: #fff;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
-.read-the-docs {
-  color: #888;
+.decks:hover {
+  background: #ccc;
+  overflow: hidden;
 }
