--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,7 +43,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #fff;
+  color: #000;
   cursor: pointer;
   transition: border-color 0.25s;
 }
